welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuits:=0

while (nbBiscuits<4){
  
  if (estSurBiscuit()){
    nbBiscuits+=1
    
  }
  avance()
}